06-persistence-backend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: observai-persistance-api
  namespace: observai-main
  labels:
    app: observai-persistance-api
    app.kubernetes.io/component: observai-persistance-api
    app.kubernetes.io/instance: observai-persistance-api
    app.kubernetes.io/name: observai-persistance-api
    app.kubernetes.io/part-of: observai
    app.openshift.io/runtime-version: latest
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 8082-tcp
      protocol: TCP
      port: 8082
      targetPort: 8082
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: observai-persistance-api
    deployment: observai-persistance-api
